<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/login_avatar_size"
                android:layout_height="@dimen/login_avatar_size"
                android:src="@drawable/user"
                android:contentDescription="avatar" />

            <TextView
                android:id="@+id/d_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/form_name"
                android:textColor="@color/black"
                android:textSize="@dimen/login_font_size">

            </TextView>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_input_margin_top">

            <EditText
                android:id="@+id/t_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:backgroundTint="@drawable/edit_text_border"
                android:hint="@string/form_password_hint"
                android:inputType="textPassword"
                android:paddingStart="@dimen/form_input_padding_left"
                android:singleLine="true"
                android:textColorHint="@color/hint"
                android:textSize="@dimen/login_font_size"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/t_password"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/form_label_margin_left"
                android:text="@string/form_password"
                android:textColor="@color/black"
                android:textSize="@dimen/login_font_size" />
        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:text="@string/login_other_login_options_hint"
            android:textColor="@color/link"
            android:textSize="@dimen/login_secondary_font_size" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorPrimary"
            android:enabled="true"
            android:padding="@dimen/form_button_padding"
            android:text="@string/login_button"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/form_button_font_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/login_request_account_recovery_hint"
            android:textColor="@color/link"
            android:textSize="@dimen/login_secondary_font_size" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/login_freeze_account_hint"
            android:textColor="@color/link"
            android:textSize="@dimen/login_secondary_font_size" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/login_more_options_hint"
            android:textColor="@color/link"
            android:textSize="@dimen/login_secondary_font_size" />


        <Button
            android:id="@+id/btn_to_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/login_sign_up_hint"
            android:textColor="@color/link"
            android:textSize="@dimen/login_secondary_font_size" />

    </LinearLayout>


</LinearLayout>